# rocket-notify

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: docker-image.yml  rust.yml
rocket-notify-cli/: Cargo.toml
rocketchat/: Cargo.toml
rocketchat/src/: client.rs  lib.rs  request.rs  response.rs
src/: lib.rs  main.rs
