[package]
name = "rocket-notify"
description = "Simple command line client to send messages to Rocket.Chat"
authors = ["Ian McLinden"]
version = "1.2.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
csscolorparser = { version = "0.7.2", features = ["serde"] }
hostname = "0.4.1"
reqwest = { version = "0.12.23", features = [
    "json",
    "blocking",
    "rustls-tls",
], default-features = false }
serde = "1.0.228"
thiserror = "2.0.17"
