[workspace]
resolver = "2"
members = ["rocket-notify-cli", "rocketchat"]

[workspace.package]
name = "rocket-notify"
description = "Simple command line utility to send messages to Rocket.Chat"
authors = ["Ian McLinden"]
edition = "2024"

[workspace.lints]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
strip = true
opt-level = "z"
lto = true
